# vku

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  build.rs
assets/egui/shaders/compiled/: egui.frag.spv  egui.frag.txt  egui.vert.spv  egui.vert.txt
assets/egui/shaders/original/: egui.frag  egui.vert
assets/shader_compilation/compiled/: example.vert.spv  example.vert.txt
assets/shader_compilation/original/: example.glsl  example.vert
assets/shaders/src/: example.glsl  example.vert
examples/: Cargo.toml  README.md  shader_compilation.rs  shader_reflection.rs  winit.rs
examples/egui/: Cargo.toml  main.rs
examples/egui/graphics/: color_test.rs  egui_renderer.rs  mod.rs  vertex.rs
examples/shader_compilation/: Cargo.toml  main.rs
examples/winit/: Cargo.toml  main.rs
src/: compute_shader.rs  create_info.rs  error.rs  errors.rs  image_layout_transitions.rs  imports.rs  init.rs  lib.rs  pipeline_builder.rs  renderer.rs  shader.rs  swapchain.rs  vertex.rs  vma_buffer.rs  vma_image.rs
tests/: default.frag  default.frag.spv  default.vert  default.vert.spv  pipeline_builder.rs
