[package]
name = "vku"
version = "0.2.0"
edition = "2021"
authors = ["Maximillian Pfeil <pfeil.maximillian@gmail.com>"]
description = "Utility crate for kickstarting vulkan development"
repository = "https://github.com/ArrowMaxGithub/vku"
license = "MIT OR Apache-2.0"
keywords = ["vku", "vulkan", "ash", "vma", "shaderc"]
categories = ["api-bindings", "graphics", "rendering"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ash = {version = "0.37.3", default-features = false, features = ["linked"]}
ash-window = "0.12.0"
raw-window-handle = "0.5.0"
vma = "0.3.0"
env_logger = {version = "0.9.0", features = ["termcolor", "humantime"]}
log = { version = "0.4.17"}
thiserror = "1.0.40"
shaderc = { version = "0.8.0", optional = true }
itertools = "0.10.5"

[dev-dependencies]
winit = "0.28.3"

[features]
shader = ["dep:shaderc"]