[package]
name = "vku"
version = "0.3.0"
edition = "2021"
authors = ["Maximillian Pfeil <pfeil.maximillian@gmail.com>"]
description = "Utility crate for kickstarting vulkan development"
repository = "https://github.com/ArrowMaxGithub/vku"
license = "MIT OR Apache-2.0"
keywords = ["vku", "vulkan", "ash", "gpu-allocator", "shaderc"]
categories = ["api-bindings", "graphics", "rendering"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ash = {version = "0.37.3", default-features = false, features = ["debug"]}
ash-window = "0.12.0"
raw-window-handle = "0.5.2"
log = "0.4.20"
thiserror = "1.0.50"
gpu-allocator = "0.24.0"

shaderc = { version = "0.8.2", optional = true }

[dev-dependencies]
winit = "0.28.7"
env_logger = {version = "0.10.0", features = ["color", "humantime"]}

[features]
default = ["loaded"]
shader = ["dep:shaderc"]
linked = ["ash/linked"]
loaded = ["ash/loaded"]